--- a/P1.ipynb
+++ b/P1.ipynb
@@ -246,6 +246,7 @@
     "\n",
     "        # Plot line - technically want to extrapolate this to our bounding box.\n",
     "        # As we do that vertically, we want a value for x when y = 540 or 325.\n",
+    "        # These values should be tweaked for different resolutions of video.\n",
     "        # Accordingly by fitting the rotated line (y,x) not (x, y) we can skip a step.\n",
     "\n",
     "        cv2.line(img, (int(f(325)), 325), (int(f(540)), 540), [0, 255, 0], 5)\n",
